--- a/USCISTracker/USCISTracker/Views/MasterDetailPage.xaml
+++ b/USCISTracker/USCISTracker/Views/MasterDetailPage.xaml
@@ -1,17 +1,13 @@
 ﻿<Page
-    x:Class="USCISTracker.Views.MainPage"
+    x:Class="USCISTracker.Views.MasterDetailPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:USCISTracker"
+    xmlns:local="using:USCISTracker.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel>
-            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Click="Button_Click">Test</Button>
-            <TextBlock x:Name="TestTextBlock"></TextBlock>
-        </StackPanel>
-        
+
     </Grid>
 </Page>
