--- a/USCISTracker/USCISTracker/Views/MasterDetailPage.xaml
+++ b/USCISTracker/USCISTracker/Views/MasterDetailPage.xaml
@@ -106,9 +106,21 @@
             <ContentPresenter.ContentTemplate>
                 <DataTemplate x:DataType="data:ICase">
                     <StackPanel>
-                        <TextBlock x:Name="DetailedCaseReceiptNumberTextBlock" Text="{Binding Path=ReceiptNumber, Converter={StaticResource ReceiptToString}}"></TextBlock>
-                        <TextBlock x:Name="DetailedCaseStatus" Text="{Binding Path=Status}"></TextBlock>
-                        <TextBlock x:Name="DetailedCaseDetails" Text="{Binding Path=Details}"></TextBlock>
+                        <TextBlock x:Name="DetailedCaseReceiptNumberTextBlock" 
+                                   Text="{Binding Path=ReceiptNumber, Converter={StaticResource ReceiptToString}}"
+                                   Style="{StaticResource TitleTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
+                        
+                        <TextBlock x:Name="DetailedCaseStatus" 
+                                   Text="{Binding Path=Status}"
+                                   Style="{StaticResource HeaderTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
+                        
+                        <TextBlock x:Name="DetailedCaseDetails" 
+                                   Text="{Binding Path=Details}" 
+                                   MaxWidth="580"
+                                   Style="{StaticResource BodyTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </ContentPresenter.ContentTemplate>
