--- a/USCISTracker/USCISTracker/Views/DetailPage.xaml
+++ b/USCISTracker/USCISTracker/Views/DetailPage.xaml
@@ -5,9 +5,41 @@
     xmlns:local="using:USCISTracker.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodel ="using:USCISTracker.ViewModels"
+    xmlns:data="using:USCISTracker.Data"
+    xmlns:converter="using:USCISTracker.Converters"
     mc:Ignorable="d">
+    
+    <!--Transition to page animation-->
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition />
+        </TransitionCollection>
+    </Page.Transitions>
 
+
+    <!--Converters-->
+    <Page.Resources>
+        <converter:IReceiptNumberToString x:Key="ReceiptToString" />
+    </Page.Resources>
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <StackPanel>
+            <TextBlock x:Name="DetailedCaseReceiptNumberTextBlock" 
+                                   Text="{Binding Case.ReceiptNumber, Converter={StaticResource ReceiptToString}}"
+                                   Style="{StaticResource TitleTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
 
+            <TextBlock x:Name="DetailedCaseStatus" 
+                                   Text="{Binding Case.Status}"
+                                   Style="{StaticResource HeaderTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
+
+            <TextBlock x:Name="DetailedCaseDetails" 
+                                   Text="{Binding Case.Details}" 
+                                   MaxWidth="580"
+                                   Style="{StaticResource BodyTextBlockStyle}"
+                                   HorizontalAlignment="Left"></TextBlock>
+        </StackPanel>
     </Grid>
 </Page>
